--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "license": "MIT",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "ethereum-waffle": "^3.2.0",
+    "ethers": "^5.0.0",
     "hardhat": "^2.11.2"
   },
   "dependencies": {
